--- a/Pear/Controllers/Onboarding/Landing Screen/Landing Screen View Controller/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Landing Screen/Landing Screen View Controller/LandingScreenViewController.storyboard
@@ -19,19 +19,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bP-dS-bgj">
-                                <rect key="frame" x="0.0" y="20" width="375" height="455"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="475"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-wz-PXH">
-                                <rect key="frame" x="160" y="478" width="55" height="37"/>
+                                <rect key="frame" x="160" y="498" width="55" height="37"/>
                                 <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="currentPageIndicatorTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pageControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhD-Vv-GXK">
-                                <rect key="frame" x="20" y="587" width="335" height="60"/>
-                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="20" y="597" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="4cn-a6-oKj"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="4dr-Mp-s14"/>
+                                    <constraint firstAttribute="height" constant="50" id="4cn-a6-oKj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Got an account?  Log in here.">
@@ -39,10 +38,10 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0e-kO-oji">
-                                <rect key="frame" x="20" y="515" width="335" height="60"/>
-                                <color key="backgroundColor" red="0.21176470588235294" green="0.8784313725490196" blue="0.63921568627450975" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="20" y="535" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="7lR-gx-kMu"/>
+                                    <constraint firstAttribute="height" constant="50" id="7lR-gx-kMu"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <state key="normal" title="Get Started">
