--- a/Pear/Controllers/Onboarding/Get Started Flow/User Name Input/GetStartedYourNameViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/User Name Input/GetStartedYourNameViewController.storyboard
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wj4-Zf-gro">
-                                <rect key="frame" x="20" y="40" width="40" height="40"/>
+                                <rect key="frame" x="20" y="32" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Ji7-dA-sqC"/>
                                     <constraint firstAttribute="width" constant="40" id="QXe-u9-e9d"/>
@@ -40,8 +40,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jane Doe" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5TP-Gv-tsU">
-                                <rect key="frame" x="20" y="196.5" width="335" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Jane" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5TP-Gv-tsU">
+                                <rect key="frame" x="20" y="176.5" width="335" height="40"/>
                                 <color key="tintColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="06N-aF-XBb"/>
@@ -51,14 +51,14 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" textContentType="name"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e16-WH-8Ul">
-                                <rect key="frame" x="0.0" y="235.5" width="375" height="1"/>
+                                <rect key="frame" x="0.0" y="215.5" width="375" height="1"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="EtY-Rb-IfH"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mNn-Sl-5vv">
-                                <rect key="frame" x="319" y="203.5" width="26" height="26"/>
+                                <rect key="frame" x="333" y="183.5" width="26" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="Lel-Rt-r4F"/>
                                     <constraint firstAttribute="width" constant="26" id="csi-s4-lFc"/>
@@ -70,6 +70,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9s5-SB-Zym">
                                 <rect key="frame" x="20" y="297" width="335" height="50"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="mtw-rf-Wur"/>
                                 </constraints>
@@ -83,18 +84,18 @@
                         <constraints>
                             <constraint firstItem="9s5-SB-Zym" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="2Ha-TW-ffw"/>
                             <constraint firstItem="e16-WH-8Ul" firstAttribute="width" secondItem="soc-Ow-m9Z" secondAttribute="width" id="4M7-UF-Y4d"/>
-                            <constraint firstItem="wj4-Zf-gro" firstAttribute="top" secondItem="Fv4-2C-F9d" secondAttribute="top" constant="20" id="5F3-aV-iqb"/>
+                            <constraint firstItem="wj4-Zf-gro" firstAttribute="top" secondItem="Fv4-2C-F9d" secondAttribute="top" constant="12" id="5F3-aV-iqb"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="66M-9q-BKd"/>
                             <constraint firstItem="Fv4-2C-F9d" firstAttribute="bottom" secondItem="9s5-SB-Zym" secondAttribute="bottom" constant="320" id="849-3J-BWh"/>
                             <constraint firstItem="wLx-As-bZM" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="50" id="CwK-Dm-skz"/>
-                            <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="mNn-Sl-5vv" secondAttribute="trailing" constant="30" id="Gk3-v0-tu8"/>
+                            <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="mNn-Sl-5vv" secondAttribute="trailing" constant="16" id="Gk3-v0-tu8"/>
                             <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="9s5-SB-Zym" secondAttribute="trailing" constant="20" id="J9f-lF-Sx8"/>
                             <constraint firstItem="e16-WH-8Ul" firstAttribute="centerX" secondItem="5TP-Gv-tsU" secondAttribute="centerX" id="WqC-dT-m1P"/>
                             <constraint firstItem="mNn-Sl-5vv" firstAttribute="centerY" secondItem="5TP-Gv-tsU" secondAttribute="centerY" id="bZs-1s-7v4"/>
                             <constraint firstItem="wj4-Zf-gro" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="20" id="e6g-Mn-pgR"/>
                             <constraint firstItem="5TP-Gv-tsU" firstAttribute="centerX" secondItem="Fv4-2C-F9d" secondAttribute="centerX" id="gDG-t9-mUW"/>
-                            <constraint firstItem="wLx-As-bZM" firstAttribute="top" secondItem="wj4-Zf-gro" secondAttribute="bottom" id="pQl-3t-uiT"/>
-                            <constraint firstItem="5TP-Gv-tsU" firstAttribute="top" secondItem="wLx-As-bZM" secondAttribute="bottom" constant="40" id="uMX-ce-J3Q"/>
+                            <constraint firstItem="wLx-As-bZM" firstAttribute="top" secondItem="wj4-Zf-gro" secondAttribute="bottom" constant="8" id="pQl-3t-uiT"/>
+                            <constraint firstItem="5TP-Gv-tsU" firstAttribute="top" secondItem="wLx-As-bZM" secondAttribute="bottom" constant="20" id="uMX-ce-J3Q"/>
                             <constraint firstItem="Fv4-2C-F9d" firstAttribute="trailing" secondItem="wLx-As-bZM" secondAttribute="trailing" constant="50" id="vC9-My-P0e"/>
                             <constraint firstItem="e16-WH-8Ul" firstAttribute="bottom" secondItem="5TP-Gv-tsU" secondAttribute="bottom" id="xZp-mh-BeE"/>
                             <constraint firstItem="9s5-SB-Zym" firstAttribute="leading" secondItem="Fv4-2C-F9d" secondAttribute="leading" constant="20" id="xea-PJ-KJf"/>
@@ -105,6 +106,7 @@
                     <connections>
                         <outlet property="inputTextField" destination="5TP-Gv-tsU" id="yJ9-3K-hHZ"/>
                         <outlet property="nextButton" destination="9s5-SB-Zym" id="bsS-13-BK5"/>
+                        <outlet property="nextButtonBottomConstraint" destination="849-3J-BWh" id="VSH-0e-Cok"/>
                         <outlet property="titleLabel" destination="wLx-As-bZM" id="mIc-0z-AWI"/>
                     </connections>
                 </viewController>
@@ -115,6 +117,6 @@
     </scenes>
     <resources>
         <image name="onboarding-back-button" width="96" height="96"/>
-        <image name="onboarding-clear-text-button" width="96" height="96"/>
+        <image name="onboarding-clear-text-button" width="14" height="14"/>
     </resources>
 </document>
