--- a/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Simple Discovery/DiscoverySimpleViewController.storyboard
@@ -63,27 +63,27 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QfY-r4-Y8X">
-                                                    <rect key="frame" x="27" y="23" width="321" height="438"/>
+                                                    <rect key="frame" x="16" y="15" width="343" height="454"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Uz-Lb-xBO">
-                                                    <rect key="frame" x="27" y="23" width="321" height="438"/>
+                                                    <rect key="frame" x="16" y="15" width="343" height="454"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QSV-KQ-nxW">
-                                                            <rect key="frame" x="0.0" y="301" width="321" height="20"/>
+                                                            <rect key="frame" x="0.0" y="323" width="343" height="20"/>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="20" id="TsR-Qe-8Gt"/>
                                                             </constraints>
                                                         </view>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XnC-nZ-AcO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="321" height="438"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="454"/>
                                                             <subviews>
                                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QmL-H5-4bA">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="321" height="321"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pn0-8j-aJJ">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="321" height="321"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="343" height="343"/>
                                                                         </stackView>
                                                                     </subviews>
                                                                     <constraints>
@@ -97,10 +97,10 @@
                                                                     </constraints>
                                                                 </scrollView>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BEB-YS-xqY">
-                                                                    <rect key="frame" x="0.0" y="321" width="321" height="47"/>
+                                                                    <rect key="frame" x="0.0" y="343" width="343" height="24"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name, Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TBX-uV-4pf">
-                                                                            <rect key="frame" x="16" y="16" width="293" height="23"/>
+                                                                            <rect key="frame" x="16" y="16" width="315" height="0.0"/>
                                                                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="22"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -115,7 +115,7 @@
                                                                     </constraints>
                                                                 </view>
                                                                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="phU-QS-g7I">
-                                                                    <rect key="frame" x="0.0" y="368" width="321" height="50"/>
+                                                                    <rect key="frame" x="0.0" y="367" width="343" height="50"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4fa-nN-H5Y">
                                                                             <rect key="frame" x="0.0" y="0.0" width="0.0" height="50"/>
@@ -140,17 +140,17 @@
                                                                     </constraints>
                                                                 </scrollView>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gp4-Fi-ni8">
-                                                                    <rect key="frame" x="0.0" y="418" width="321" height="20"/>
+                                                                    <rect key="frame" x="0.0" y="417" width="343" height="37"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="discovery-icon-suggested" translatesAutoresizingMaskIntoConstraints="NO" id="YHY-6r-wjr">
-                                                                            <rect key="frame" x="16" y="-9" width="18" height="18"/>
+                                                                            <rect key="frame" x="16" y="-0.5" width="18" height="18"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="18" id="5ZN-u3-GUf"/>
                                                                                 <constraint firstAttribute="width" secondItem="YHY-6r-wjr" secondAttribute="height" multiplier="1:1" id="G4G-VM-jaZ"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suggested for" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNC-Oe-XCP">
-                                                                            <rect key="frame" x="46" y="0.0" width="263" height="0.0"/>
+                                                                            <rect key="frame" x="46" y="0.0" width="285" height="17"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -169,13 +169,13 @@
                                                             </subviews>
                                                         </stackView>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Psg-dH-oMI">
-                                                            <rect key="frame" x="0.0" y="0.0" width="160.5" height="321"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="171.5" height="343"/>
                                                             <connections>
                                                                 <action selector="backButtonClicked:" destination="dpC-89-kHb" eventType="touchUpInside" id="b5a-db-T4B"/>
                                                             </connections>
                                                         </button>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJK-9R-lNQ">
-                                                            <rect key="frame" x="160.5" y="0.0" width="160.5" height="321"/>
+                                                            <rect key="frame" x="171.5" y="0.0" width="171.5" height="343"/>
                                                             <connections>
                                                                 <action selector="forwardButtonClicked:" destination="dpC-89-kHb" eventType="touchUpInside" id="pKB-Cr-4lm"/>
                                                             </connections>
@@ -202,14 +202,14 @@
                                                 </view>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="0Uz-Lb-xBO" secondAttribute="trailing" constant="12" id="D74-KB-qJH"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Uz-Lb-xBO" secondAttribute="trailing" constant="16" id="2Xc-Yd-JpL"/>
+                                                <constraint firstItem="0Uz-Lb-xBO" firstAttribute="leading" secondItem="X8o-go-E0H" secondAttribute="leading" constant="16" id="DBt-AU-Zmr"/>
                                                 <constraint firstItem="QfY-r4-Y8X" firstAttribute="centerX" secondItem="0Uz-Lb-xBO" secondAttribute="centerX" id="IWa-hX-9sT"/>
                                                 <constraint firstItem="QfY-r4-Y8X" firstAttribute="width" secondItem="0Uz-Lb-xBO" secondAttribute="width" id="RGx-iZ-Q2J"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="0Uz-Lb-xBO" secondAttribute="bottom" constant="12" id="TuQ-pJ-Mzf"/>
-                                                <constraint firstItem="0Uz-Lb-xBO" firstAttribute="leading" secondItem="X8o-go-E0H" secondAttribute="leadingMargin" constant="12" id="duG-6f-DXT"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0Uz-Lb-xBO" secondAttribute="bottom" constant="4" id="TuQ-pJ-Mzf"/>
                                                 <constraint firstItem="QfY-r4-Y8X" firstAttribute="height" secondItem="0Uz-Lb-xBO" secondAttribute="height" id="kBK-qi-JVa"/>
                                                 <constraint firstItem="QfY-r4-Y8X" firstAttribute="centerY" secondItem="0Uz-Lb-xBO" secondAttribute="centerY" id="rCF-MQ-cpp"/>
-                                                <constraint firstItem="0Uz-Lb-xBO" firstAttribute="top" secondItem="X8o-go-E0H" secondAttribute="topMargin" constant="12" id="wcM-cp-SMX"/>
+                                                <constraint firstItem="0Uz-Lb-xBO" firstAttribute="top" secondItem="X8o-go-E0H" secondAttribute="topMargin" constant="4" id="wcM-cp-SMX"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -253,7 +253,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="discovery-icon-suggested" width="500" height="500"/>
-        <image name="discovery-icon-tree" width="190" height="190"/>
+        <image name="discovery-icon-suggested" width="166.66667175292969" height="166.66667175292969"/>
+        <image name="discovery-icon-tree" width="63.333332061767578" height="63.333332061767578"/>
     </resources>
 </document>
